Add missing custom composer command

--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,9 @@
             "NotificationChannels\\Discord\\Test\\": "tests"
         }
     },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
+    },
     "config": {
         "sort-packages": true
     },
