--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,10 @@
     "require": {
         "php": ">=5.6.4",
         "guzzlehttp/guzzle": "^6.2",
-        "illuminate/notifications": "^5.3@dev",
-        "illuminate/support": "^5.3@dev",
-        "illuminate/console": "^5.3@dev",
-        "illuminate/queue": "^5.3@dev",
+        "illuminate/notifications": "5.3.*",
+        "illuminate/support": "5.3.*",
+        "illuminate/console": "5.3.*",
+        "illuminate/queue": "5.3.*",
         "textalk/websocket": "1.0.*"
     },
     "require-dev": {
