--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
         "php": ">=5.6.4",
         "guzzlehttp/guzzle": "^6.2",
         "illuminate/notifications": "5.3.*",
-        "illuminate/support": "5.3.*",
-        "illuminate/console": "5.3.*",
-        "illuminate/queue": "5.3.*",
+        "illuminate/support": "5.1.*|5.2.*|5.3.*",
+        "illuminate/console": "5.1.*|5.2.*|5.3.*",
+        "illuminate/queue": "5.1.*|5.2.*|5.3.*",
         "textalk/websocket": "1.0.*"
     },
     "require-dev": {
@@ -45,6 +45,5 @@
     },
     "config": {
         "sort-packages": true
-    },
-    "minimum-stability": "dev"
+    }
 }
