--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,8 @@
     },
     "require-dev": {
         "mockery/mockery": "^0.9.5",
+        "orchestra/testbench": "3.1.*|3.2.*|3.3.*",
+        "laravel/framework": "5.1.*|5.2.*|5.3.*",
         "phpunit/phpunit": "4.*"
     },
     "autoload": {
