--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,10 @@
     "require": {
         "php": ">=5.6.4",
         "guzzlehttp/guzzle": "^6.2",
-        "illuminate/notifications": "5.3.*",
-        "illuminate/support": "5.1.*|5.2.*|5.3.*",
-        "illuminate/queue": "5.1.*|5.2.*|5.3.*",
-        "illuminate/console": "5.1.*|5.2.*|5.3.*",
+        "illuminate/notifications": "5.3.*|5.4.*",
+        "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*",
+        "illuminate/queue": "5.1.*|5.2.*|5.3.*|5.4.*",
+        "illuminate/console": "5.1.*|5.2.*|5.3.*|5.4.*",
         "textalk/websocket": "1.0.*"
     },
     "require-dev": {
