--- a/composer.json
+++ b/composer.json
@@ -19,18 +19,19 @@
     ],
     "require": {
         "php": ">=5.6.4",
-        "guzzlehttp/guzzle": "^6.2",
+        "guzzlehttp/guzzle": "~6.0",
         "illuminate/notifications": "5.3.*|5.4.*",
-        "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*",
+        "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*"
         "illuminate/queue": "5.1.*|5.2.*|5.3.*|5.4.*",
         "illuminate/console": "5.1.*|5.2.*|5.3.*|5.4.*",
         "textalk/websocket": "1.0.*"
     },
     "require-dev": {
         "mockery/mockery": "^0.9.5",
-        "orchestra/testbench": "3.1.*|3.2.*|3.3.*",
+        "orchestra/testbench": "3.1.*|3.2.*|3.3.*|3.3.x-dev",
         "laravel/framework": "5.1.*|5.2.*|5.3.*|5.4.*",
         "phpunit/phpunit": "4.*"
+        "orchestra/database": "3.3.x-dev"
     },
     "autoload": {
         "psr-4": {
