--- a/composer.json
+++ b/composer.json
@@ -20,18 +20,18 @@
     "require": {
         "php": ">=5.6.4",
         "guzzlehttp/guzzle": "~6.0",
-        "illuminate/notifications": "5.3.*|5.4.*|5.5.*",
-        "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*",
-        "illuminate/queue": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*",
-        "illuminate/console": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*",
+        "illuminate/notifications": "5.3.*|5.4.*|5.5.*|5.6.*",
+        "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
+        "illuminate/queue": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
+        "illuminate/console": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
         "textalk/websocket": "1.0.*"
     },
     "require-dev": {
         "mockery/mockery": "^0.9.5",
-        "orchestra/testbench": "3.1.*|3.2.*|3.3.*|3.3.x-dev",
-        "laravel/framework": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*",
+        "orchestra/testbench": "3.1.*|3.2.*|3.3.*|3.4.*|3.5.*|3.6.*|3.6.x-dev",
+        "laravel/framework": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
         "phpunit/phpunit": "4.*",
-        "orchestra/database": "3.3.x-dev"
+        "orchestra/database": "3.6.x-dev"
     },
     "autoload": {
         "psr-4": {
