--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "mockery/mockery": "^0.9.5",
         "orchestra/testbench": "3.1.*|3.2.*|3.3.*|3.4.*|3.5.*|3.6.*|3.6.x-dev",
         "laravel/framework": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
-        "phpunit/phpunit": "4.*",
+        "phpunit/phpunit": "4.*|6.*|7.*",
         "orchestra/database": "3.6.x-dev"
     },
     "autoload": {
