--- a/composer.json
+++ b/composer.json
@@ -18,19 +18,19 @@
         }
     ],
     "require": {
-        "php": ">=5.6.4",
+        "php": ">=7.1.2",
         "guzzlehttp/guzzle": "~6.0",
-        "illuminate/notifications": "5.3.*|5.4.*|5.5.*|5.6.*",
-        "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
-        "illuminate/queue": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
-        "illuminate/console": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
+        "illuminate/notifications": "5.6.*",
+        "illuminate/support": "5.6.*",
+        "illuminate/queue": "5.6.*",
+        "illuminate/console": "5.6.*",
         "textalk/websocket": "1.0.*"
     },
     "require-dev": {
-        "mockery/mockery": "^0.9.5",
-        "orchestra/testbench": "3.1.*|3.2.*|3.3.*|3.4.*|3.5.*|3.6.*|3.6.x-dev",
-        "laravel/framework": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
-        "phpunit/phpunit": "4.*|6.*|7.*",
+        "mockery/mockery": "^1.0",
+        "orchestra/testbench": "3.6.*|3.6.x-dev",
+        "laravel/framework": "5.6.*",
+        "phpunit/phpunit": "7.*",
         "orchestra/database": "3.6.x-dev"
     },
     "autoload": {
