--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravel-notification-channels/discord",
+    "name": "olimarferraz/laravel-discord-notification",
     "description": "Laravel notification driver for Discord.",
     "keywords": [
         "laravel",
@@ -8,18 +8,18 @@
         "channel",
         "discord"
     ],
-    "homepage": "https://github.com/laravel-notification-channels/discord",
+    "homepage": "https://github.com/olimarferraz/discord",
     "license": "MIT",
     "authors": [
         {
-            "name": "Cody Scott",
-            "email": "cs475x@icloud.com",
+            "name": "Olimar Ferraz",
+            "email": "olimarferraz@gmail.com",
             "role": "Developer"
         }
     ],
     "require": {
-        "php": ">=7.1.2",
-        "guzzlehttp/guzzle": "~6.0",
+        "php": ">=7.1.3",
+        "guzzlehttp/guzzle": "~6.3",
         "illuminate/notifications": "5.6.*",
         "illuminate/support": "5.6.*",
         "illuminate/queue": "5.6.*",
@@ -30,7 +30,7 @@
         "mockery/mockery": "^1.0",
         "orchestra/testbench": "3.6.*|3.6.x-dev",
         "laravel/framework": "5.6.*",
-        "phpunit/phpunit": "7.*",
+        "phpunit/phpunit": "^7.0",
         "orchestra/database": "3.6.x-dev"
     },
     "autoload": {
