--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     "require-dev": {
         "mockery/mockery": "^1.0",
         "orchestra/testbench": "3.6.*|3.6.x-dev",
-        "laravel/framework": "5.6.*",
+        "laravel/framework": "5.6.*|5.7.*",
         "phpunit/phpunit": "7.*",
         "orchestra/database": "3.6.x-dev"
     },
