--- a/composer.json
+++ b/composer.json
@@ -20,16 +20,16 @@
     "require": {
         "php": ">=7.1.2",
         "guzzlehttp/guzzle": "~6.0",
-        "illuminate/notifications": "5.6.*",
-        "illuminate/support": "5.6.*",
-        "illuminate/queue": "5.6.*",
-        "illuminate/console": "5.6.*",
+        "illuminate/notifications": "5.6.*|5.7.*",
+        "illuminate/support": "5.6.*|5.7.*",
+        "illuminate/queue": "5.6.*|5.7.*",
+        "illuminate/console": "5.6.*|5.7.*",
         "textalk/websocket": "1.0.*"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
         "orchestra/testbench": "3.6.*|3.6.x-dev",
-        "laravel/framework": "5.6.*|5.7.*",
+        "laravel/framework": "5.7.*",
         "phpunit/phpunit": "7.*",
         "orchestra/database": "3.6.x-dev"
     },
