--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "3.6.*|3.6.x-dev",
+        "orchestra/testbench": "3.6.*|3.7.*",
         "laravel/framework": "5.7.*",
         "phpunit/phpunit": "7.*",
         "orchestra/database": "3.6.x-dev"
