--- a/composer.json
+++ b/composer.json
@@ -19,19 +19,20 @@
     ],
     "require": {
         "php": ">=7.1.2",
+        "ext-json": "*",
         "guzzlehttp/guzzle": "~6.0",
-        "illuminate/notifications": "5.6.*|5.7.*",
-        "illuminate/support": "5.6.*|5.7.*",
-        "illuminate/queue": "5.6.*|5.7.*",
-        "illuminate/console": "5.6.*|5.7.*",
+        "illuminate/notifications": "^5.6",
+        "illuminate/support": "^5.6",
+        "illuminate/queue": "^5.6",
+        "illuminate/console": "^5.6",
         "textalk/websocket": "1.0.*"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "3.6.*|3.7.*",
-        "laravel/framework": "5.6.*|5.7.*",
+        "orchestra/testbench": "^3.6",
+        "laravel/framework": "^5.6",
         "phpunit/phpunit": "7.*",
-        "orchestra/database": "3.6.x-dev"
+        "orchestra/database": "3.8.x-dev"
     },
     "autoload": {
         "psr-4": {
