--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
         "php": ">=7.1.2",
         "ext-json": "*",
         "guzzlehttp/guzzle": "~6.3",
-        "illuminate/notifications": "^5.6",
-        "illuminate/support": "^5.6",
-        "illuminate/queue": "^5.6",
-        "illuminate/console": "^5.6",
+        "illuminate/notifications": "*",
+        "illuminate/support": "*",
+        "illuminate/queue": "*",
+        "illuminate/console": "*",
         "textalk/websocket": "^1.2"
     },
     "require-dev": {
