--- a/composer.json
+++ b/composer.json
@@ -20,19 +20,17 @@
     "require": {
         "php": ">=7.1.2",
         "ext-json": "*",
-        "guzzlehttp/guzzle": "~6.3",
-        "illuminate/notifications": "*",
-        "illuminate/support": "*",
-        "illuminate/queue": "*",
-        "illuminate/console": "*",
+        "guzzlehttp/guzzle": "^6.3",
+        "illuminate/notifications": "^5.6||^6.0",
+        "illuminate/support": "^5.6||^6.0",
+        "illuminate/queue": "^5.6||^6.0",
+        "illuminate/console": "^5.6||^6.0",
         "textalk/websocket": "^1.2"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "^3.6",
-        "laravel/framework": "^5.6",
-        "phpunit/phpunit": "7.*",
-        "orchestra/database": "3.8.x-dev"
+        "orchestra/testbench": "^3.8||^4.0",
+        "phpunit/phpunit": "^7.0||^8.0"
     },
     "autoload": {
         "psr-4": {
