--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "require-dev": {
         "mockery/mockery": "^1.0",
         "orchestra/testbench": "^4.0",
-        "phpunit/phpunit": "^8.0|^8.5"
+        "phpunit/phpunit": "^8.5"
     },
     "autoload": {
         "psr-4": {
