--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
         "php": "^7.2",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^6.3",
-        "illuminate/notifications": "^6.0|^7.0",
-        "illuminate/support": "^6.0|^7.0",
-        "illuminate/queue": "^6.0|^7.0",
-        "illuminate/console": "^6.0|^7.0",
+        "illuminate/notifications": "^6.0 || ^7.0",
+        "illuminate/support": "^6.0 || ^7.0",
+        "illuminate/queue": "^6.0 || ^7.0",
+        "illuminate/console": "^6.0 || ^7.0",
         "textalk/websocket": "^1.2"
     },
     "require-dev": {
