--- a/composer.json
+++ b/composer.json
@@ -21,16 +21,16 @@
         "php": "^7.2",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^6.3",
-        "illuminate/notifications": "^6.0",
-        "illuminate/support": "^6.0",
-        "illuminate/queue": "^6.0",
-        "illuminate/console": "^6.0",
+        "illuminate/notifications": "^6.0 || ^7.0",
+        "illuminate/support": "^6.0 || ^7.0",
+        "illuminate/queue": "^6.0 || ^7.0",
+        "illuminate/console": "^6.0 || ^7.0",
         "textalk/websocket": "^1.2"
     },
     "require-dev": {
-        "mockery/mockery": "^1.0",
-        "orchestra/testbench": "^4.0",
-        "phpunit/phpunit": "^8.0"
+        "mockery/mockery": "^1.3",
+        "orchestra/testbench": "^5.0",
+        "phpunit/phpunit": "^8.5"
     },
     "autoload": {
         "psr-4": {
