ci: update to use matrix.os for OS

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   run:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       max-parallel: 15
       fail-fast: false
