--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -22,7 +22,7 @@ jobs:
         uses: shivammathur/setup-php@master
         with:
           php-version: ${{ matrix.php }}
-          extensions: mbstring, xdebug
+          extensions: mbstring
           coverage: pcov
 
       - name: Install dependencies
