--- a/composer.json
+++ b/composer.json
@@ -21,15 +21,15 @@
         "php": "^7.2|^8.0",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^6.3 || ^7.0",
-        "illuminate/notifications": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "illuminate/queue": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "illuminate/console": "^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "illuminate/notifications": "^6.0 || ^7.0 || ^8.0 || ^9.0|^10.0",
+        "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0|^10.0",
+        "illuminate/queue": "^6.0 || ^7.0 || ^8.0 || ^9.0|^10.0",
+        "illuminate/console": "^6.0 || ^7.0 || ^8.0 || ^9.0|^10.0",
         "textalk/websocket": "^1.2"
     },
     "require-dev": {
         "mockery/mockery": "^1.3.3",
-        "orchestra/testbench": "^5.0 || ^6.0 || ^7.0",
+        "orchestra/testbench": "^5.0 || ^6.0 || ^7.0|^8.0",
         "phpunit/phpunit": "^8.5 || ^9.0"
     },
     "autoload": {
