--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "illuminate/support": "^7.0 || ^8.0 || ^9.0 || ^10.0",
         "illuminate/queue": "^7.0 || ^8.0 || ^9.0 || ^10.0",
         "illuminate/console": "^7.0 || ^8.0 || ^9.0 || ^10.0",
-        "textalk/websocket": "^1.2"
+        "phrity/websocket": "^1.5"
     },
     "require-dev": {
         "mockery/mockery": "^1.3.3",
