--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
         "php": "^7.2|^8.0",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^6.3 || ^7.0",
-        "illuminate/notifications": "^7.0 || ^8.0 || ^9.0 || ^10.0|^11.0",
-        "illuminate/support": "^7.0 || ^8.0 || ^9.0 || ^10.0|^11.0",
-        "illuminate/queue": "^7.0 || ^8.0 || ^9.0 || ^10.0|^11.0",
-        "illuminate/console": "^7.0 || ^8.0 || ^9.0 || ^10.0|^11.0",
+        "illuminate/notifications": "^7.0 || ^8.0 || ^9.0 || ^10.0 || ^11.0 || ^12.0",
+        "illuminate/support": "^7.0 || ^8.0 || ^9.0 || ^10.0 || ^11.0 || ^12.0",
+        "illuminate/queue": "^7.0 || ^8.0 || ^9.0 || ^10.0 || ^11.0 || ^12.0",
+        "illuminate/console": "^7.0 || ^8.0 || ^9.0 || ^10.0 || ^11.0 || ^12.0",
         "textalk/websocket": "^1.2"
     },
     "require-dev": {
