--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,8 @@
     },
     "require-dev": {
         "mockery/mockery": "^1.3.3",
-        "orchestra/testbench": "^6.0 || ^7.0 || ^8.0|^9.0",
-        "phpunit/phpunit": "^8.5 || ^9.0|^10.5"
+        "orchestra/testbench": "^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0",
+        "phpunit/phpunit": "^8.5 || ^9.0 || ^10.5"
     },
     "autoload": {
         "psr-4": {
